--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,34 @@
     box-sizing: border-box;
     font-family: "SF-Pro-Text-Regular";
 }
+/* Menu movil */
+.menu{
+    background: var(--color-secundary);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+.menu ul{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.menu ul li{
+    list-style: none;
+}
+.menu ul li a{
+    text-decoration: none;
+}
+
+.menu ul li a i{
+    font-size: 25px;
+    color: var(--color-icon);
+}
+.menu ul li a{
+    color: var(--color-primary);
+    transition: color 0.3s ease-in-out;
+}
+/* *********************************************** */
