--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,83 @@
     box-sizing: border-box;
     font-family: "SF-Pro-Text-Regular";
 }
+.header{
+    display: grid;
+    /* background: red; */
+    padding: 10px;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(1,1fr);
+    grid-template-areas: 
+    "logo burger";
+}
+.logo  {
+    grid-area: logo;
+    gap: 12px;
+}
+.logo h1{
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    font-family: "SF-Pro-Text-Bold";
+}
+.logo, .burger{
+    width: 100%;
+    height: 25px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.burger{
+    grid-area: burger;
+    justify-content: flex-end;
+}
+.logo i, .burger i{
+    font-size: 24px;
+}
+/* ******************************************** */
+.container{
+    background: blue;
+    display: grid;
+    padding: 10px;
+    grid-template-columns: repeat(1,1fr);
+    grid-auto-rows: 1fr;
+}
+
+.banner{
+    background: olive;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.banner_title{
+    background: darkorange;
+    padding: 10px 0;
+}
+.banner_title h3{
+    font-size: 1.4rem;
+    text-transform: capitalize;
+    font-family: "SF-Pro-Text-Bold";
+}
+.banner_logo{
+    height: 150px; 
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.banner_boxLogo{
+    width: 190px;
+    height: 150px;
+    background: darkgray;
+    display: center;
+    justify-content: center;
+}
+.banner_boxLogo img{
+    width: 120px;
+}
+.banner_card{
+    background: darkblue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
