--- a/css/style.css
+++ b/css/style.css
@@ -39,15 +39,15 @@
 }
 /* ******************************************** */
 .container{
-    background: blue;
+    /* background: blue; */
     display: grid;
     padding: 10px;
+    grid-gap: 25px;
     grid-template-columns: repeat(1,1fr);
-    grid-auto-rows: 1fr;
 }
 
 .banner{
-    background: olive;
+    /* background: olive; */
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -61,13 +61,54 @@
     text-transform: capitalize;
     font-family: "SF-Pro-Text-Bold";
 }
+.banner_publicidad{
+    width: 100%;
+    height: 140px;
+    margin: 10px 0;
+    background: #00388b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .banner_logo{
+    background: greenyellow;
     height: 150px; 
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+.banner_data{
+    width: 80%;
+}
+.banner_data strong{
+    font-family: "SF-Pro-Text-Bold";
+}
+.banner_close{
+    position: absolute;
+    background: var(--color-primary);
+    border: none;
+    color: var(--color-ternario);
+    width: 25px;
+    height: 25px;
+    top: 5px;
+    right: 10px;
+    border-radius: 100%;
+}
+.banner_more{
+    margin-top: 10px;
+
+}
+.banner_card{
+    width: 98%;
+    height: 130px;
+    background: var(--color-ternario);
+    overflow: hidden;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+
 }
 .banner_boxLogo{
     width: 190px;
@@ -76,12 +117,59 @@
     display: center;
     justify-content: center;
 }
-.banner_boxLogo img{
-    width: 120px;
+.banner_logo img{
+    height: 130px;
 }
 .banner_card{
     background: darkblue;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.carusel{
+    
+}
+.carusel_card{
+    width: 94vw;
+    background: red;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    margin: auto;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.carusel__container{
+    width: 100%;
+    height: 200px;
+    background: green;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.carusel_img{
+    min-width: 55%;
+    min-height: 80vh;
+    background: url(../storage/img/card.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative; 
+    display: flex;
+}
+.carusel_img, .carusel_img small, .carusel_img h2 img{
+    position: absolute;
+}
+
+.carusel_img small{
+    top: 20px;
+    right: 20px;
+}
+.carusel_img h2{
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
 }
