--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 .header{
     display: grid;
     /* background: red; */
-    padding: 10px;
+    padding: 6px;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(1,1fr);
     grid-template-areas: 
@@ -19,13 +19,14 @@
     gap: 12px;
 }
 .logo h1{
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     text-transform: uppercase;
     font-family: "SF-Pro-Text-Bold";
+    letter-spacing: 4px;
 }
 .logo, .burger{
-    width: 100%;
-    height: 25px;
+    /* width: 100%; */
+    /* height: 25px; */
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -34,8 +35,13 @@
     grid-area: burger;
     justify-content: flex-end;
 }
-.logo i, .burger i{
-    font-size: 24px;
+.burger img{
+    width: 35px;
+    height: 35px;
+}
+.logo img{
+    width: 40px;
+    height: 35px;
 }
 /* ******************************************** */
 .container{
@@ -53,8 +59,9 @@
     gap: 15px;
 }
 .banner_title{
-    background: darkorange;
-    padding: 10px 0;
+    /* background: darkorange; */
+    padding: 20px 2px;
+    color:var(--color-secundary);
 }
 .banner_title h3{
     font-size: 1.4rem;
@@ -65,40 +72,63 @@
     width: 100%;
     height: 140px;
     margin: 10px 0;
-    background: #00388b;
+    /* background: #00388b; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .banner_logo{
-    background: greenyellow;
+    /* background: greenyellow; */
     height: 150px; 
-    width: 100%;
+    width: 60%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
 }
 .banner_data{
     width: 80%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    justify-content: center;
+    /* justify-content: space-evenly; */
 }
 .banner_data strong{
     font-family: "SF-Pro-Text-Bold";
+    font-size: 1.3em;
 }
 .banner_close{
-    position: absolute;
+    /* position: absolute; */
     background: var(--color-primary);
     border: none;
+    position: absolute;
     color: var(--color-ternario);
-    width: 25px;
-    height: 25px;
-    top: 5px;
-    right: 10px;
+    width: 22px;
+    height: 22px;
+    top: 21.5%;
+    left: 89%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-self:flex-start;
     border-radius: 100%;
+}    
+.banner_close i{
+    align-self: center;
+    justify-self: center;
+}
+.banner_data small{
+    color: var(--color-cuaternario);
 }
 .banner_more{
     margin-top: 10px;
-
+    background-color: var(--color-primary);
+    border-radius: 10px;
+    border: none;
+    height: 2em;
+    width: 8em;
 }
 .banner_card{
     width: 98%;
@@ -107,7 +137,10 @@
     overflow: hidden;
     border-radius: 20px;
     display: flex;
+    flex-direction: row;
     justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 12px rgb(230, 228, 228);
 
 }
 .banner_boxLogo{
@@ -120,46 +153,34 @@
 .banner_logo img{
     height: 130px;
 }
-.banner_card{
-    background: darkblue;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.carusel{
-    
-}
+/*Carusel*****************************/
+
 .carusel_card{
-    width: 94vw;
-    background: red;
-    overflow: hidden;
+    width: 95vw;
     display: flex;
     flex-direction: row;
     overflow-x: scroll;
     margin: auto;
     align-items: center;
-    justify-content: space-between;
+    gap: 5px;
+    margin: 15px 0;
 }
 
-.carusel__container{
-    width: 100%;
-    height: 200px;
-    background: green;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
 .carusel_img{
     min-width: 55%;
-    min-height: 80vh;
+    min-height: 40vh;
     background: url(../storage/img/card.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    position: relative; 
+    position: relative;
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-ternario);
 }
-.carusel_img, .carusel_img small, .carusel_img h2 img{
+.carusel_img small, .carusel_img img{
     position: absolute;
 }
 
@@ -167,9 +188,7 @@
     top: 20px;
     right: 20px;
 }
-.carusel_img h2{
-    right: 0;
-    left: 0;
-    top: 0;
-    bottom: 0;
+.carusel_img img{
+    left: 20px;
+    bottom: 20px;
 }
