feat: :construction: Construccion Profile
Pendiente realizar la subida del nav

--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,168 @@
     box-sizing: border-box;
     font-family: "SF-Pro-Text-Regular";
 }
+.banner{
+    background: var(--color-secundary);
+    position: absolute;
+    z-index: -10;
+}
+.banner img{
+    width: 100%;
+    height: 120vh;
+    object-fit: cover;
+}
+.profile{
+    /* background-color: red; */
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+}
+.profile_balance{
+    /* background-color: green; */
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 10px;
+}
+.profile_titule{
+    /* background: blue; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-transform: capitalize;
+    color: var(--color-ternario);
+}
+.profile_titule h3{
+    font-size: 2em;
+    font-family: "SF-Pro-Text-Heavy.otf";
+}
+.profile_titule p{
+    font-size: 2.3em;
+    font-family: "SF-Pro-Text-Regular";
+}
+.profile_process{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+    color: var(--color-ternario);
+}
+.profile_savings, .profile_assets{
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+}
+.profile_savings small, 
+.profile_assets small{
+    text-transform:uppercase;
+    font-size: .8em;
+    margin-bottom: 5px;
+}
+.profile_savings label, 
+.profile_assets label{
+    font-family: "SF-Pro-Text-Semibold";
+    font-size: 1.3e,;
+}
+.profile_savings progress, 
+.profile_assets progress{
+    width: 100%;
+}
+
+
+.profile_savings progress[value] {
+    --color: var(--color-primary);
+    --background: var(--color-ternario);
+    background: var(--background);
+}
+
+.profile_assets progress[value] {
+    --color: var(--color-cuarto);
+    --background: var(--color-ternario);
+    background: var(--background);
+}
+
+progress[value] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: none;
+    height: .5em;
+    border-radius: 10em;
+}
+
+.profile_savings progress[value]::-webkit-progress-bar,
+.profile_assets progress[value]::-webkit-progress-bar {
+    border-radius: 10em;
+    height: .5em;
+    background: var(--background);
+}
+
+progress[value]::-webkit-progress-value {
+    border-radius: 10em;
+    background: var(--color);
+}
+
+progress[value]::-moz-progress-bar {
+    border-radius: 10em;
+    background: var(--color);
+}
+.activities_title h3{
+    font-size: 1.4rem;
+    text-transform: capitalize;
+    font-family: "SF-Pro-Text-Bold";
+
+}
+.profile_activities{
+    background: var(--color-ternario);
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    padding: 20px 10px;
+    position: absolute;
+    /* z-index: -5; */
+    bottom: 50px;
+    height: 60vh;
+    /* transition: height .3s ease-out; */
+}
+/* .profile_activities:active{
+    height: 85vh;
+} */
+.activities_carusel_card{
+    width: 95vw;
+    display: flex;
+    flex-direction: row;
+    overflow: scroll;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin: 15px 0;
+}
+
+.activities_carusel_img{
+    min-width: 30%;
+    min-height: 19vh;
+    background-color: var(--color-ternario);
+    border-radius: 10px;
+    box-shadow: var(--color-shadow-transparent);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-secundary);
+    margin: 15px 0;
+}
+.activities_carusel_img small,
+.carusel_img h4{
+    position: absolute;
+}
+.activities_carusel_img i{
+    font-size: 2.5em;
+}
+.activities_carusel_img h4{
+    bottom: 20px;
+}
