--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,11 @@
     font-family: "SF-Pro-Text-Regular";
 }
 body{
-    background-color: blanchedalmond;
+    width: 100svw;
+    height: 100svh;
+    display: flex;
+    flex-direction: column;
+    /* background-color: blanchedalmond; */
 }
 .header{
     display: grid;
@@ -46,4 +50,133 @@ body{
 .logo img{
     width: 40px;
     height: 35px;
+}
+.background{
+    width: 100%;
+    height: 26vh;
+    background: var(--color-secundary);
+    border-radius: 0px 0 30px 30px;
+    /* z-index: 5; */
+    border-bottom: 4px solid var(--color-primary);
+    color: var(--color-cuarto);
+}
+.background h2{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 3% 0 0 0;
+    font-size: 2em;
+}
+.background small{
+    font-family: "SF-Pro-Text-Bold";
+    font-size: 1em;
+    font-weight: 600;
+    padding: 2px 0 0 10px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+.background .balance{
+    padding: 8% 2% 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+.background .balance h3{
+    font-size: 2.6em;
+}
+.background .balance p{
+    font-size: 1.4em;
+}
+.graph_titles{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    font-size: 1.2em;
+    padding-top: 5%;
+    padding-bottom: 6%;
+}
+.graph_titles :first-child{
+    width: 26%;
+    color: var(--color-primary);
+    border: 2px solid var(--color-primary);
+    border-radius: 4em;
+    text-align: center;
+}
+.graph_titles :nth-child(2){
+    width: 26%;
+    color: var(--color-secundary);
+    border: 2px solid var(--color-secundary);
+    border-radius: 4em;
+    text-align: center;
+}
+.graph_titles :nth-child(3){
+    width: 26%;
+    color: var(--color-secundary);
+    border: 2px solid var(--color-secundary);
+    border-radius: 4em;
+    text-align: center;
+}
+.graph_imagen{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.graph_imagen img{
+    /* display: flex; */
+    width: 95%;
+    height: auto;
+}
+.banner{
+    width: 100%;
+    height: 8em;
+    border-radius: 6px 6px 0 0;
+    background: var(--color-cuarto);
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    align-items: center;
+    align-self: flex-end;
+    justify-content: center;
+    gap: 5%;
+}
+.banner img{
+    padding-left: 5%;
+    height: 50%;
+}
+.banner .banner_info{
+    width: 55%;
+    display: flex;
+    flex-direction: column;
+    gap: 10%;
+    box-sizing: content-box;
+}
+.banner h2{
+    font-size: 1.4em;
+    color: var(--color-secundary);
+}
+.banner p{
+    font-size: 0.8em;
+    color: var(--color-cuaternario);
+}
+.banner button{
+    background: var(--color-primary);
+    border: none;
+    position: relative;
+    color: var(--color-secundary);
+    width: 22px;
+    height: 22px;
+    top: 1em;
+    right: 8px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-self:flex-start;
+    border-radius: 100%;
+    /* z-index: 5; */
+}    
+.banner_close i{
+    align-self: center;
+    justify-self: center;
 }
