--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,12 @@
     box-sizing: border-box;
     font-family: "SF-Pro-Text-Regular";
 }
-.banner{
+.profile_banner{
     background: var(--color-secundary);
     position: absolute;
     z-index: -10;
 }
-.banner img{
+.profile_banner img{
     width: 100%;
     height: 120vh;
     object-fit: cover;
