--- a/css/style.css
+++ b/css/style.css
@@ -237,11 +237,65 @@
     width: 100%;
     z-index: 5;
 }
+.menu_home ul{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.menu_home ul li{
+    list-style: none;
+}
+.menu_home ul li a{
+    text-decoration: none;
+}
 
+.menu_home ul li a i{
+    font-size: 25px;
+    color: var(--color-icon);
+}
+.menu_home ul li a{
+    color: var(--color-primary);
+    transition: color 0.3s ease-in-out;
+}
 .menu_home ul :nth-child(3){
     box-shadow:0 0 15px 5px var(--color-secundary);
     border-radius: 6px;
 }
+
+.menu_balance{
+    background:var(--color-primary);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    z-index: 5;
+}
+.menu_balance ul{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.menu_balance ul li{
+    list-style: none;
+}
+.menu_balance ul li a{
+    text-decoration: none;
+}
+
+.menu_balance ul li a i{
+    font-size: 25px;
+    color: var(--color-icon);
+}
+.menu_balance ul li a{
+    color: var(--color-primary);
+    transition: color 0.3s ease-in-out;
+}
+
 .menu_balance ul :nth-child(2){
     box-shadow:0 0 15px 5px var(--color-secundary);
     border-radius: 6px;
